# KWebCam

./: CMakeLists.txt  KWebCam.kdev4
.kdev4/: KWebCam.kdev4
doc/: CMakeLists.txt
src/: CMakeLists.txt  Messages.sh  kwebcam.cpp  kwebcam.desktop  kwebcam.h  kwebcam.kcfg  kwebcamui.rc  kwebcamview.cpp  kwebcamview.h  kwebcamview_base.ui  kwebcamwidgetsurface.cpp  kwebcamwidgetsurface.h  main.cpp  settings.kcfgc
